--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -36,6 +36,7 @@ Learner collaborative
   </div>
 
 </div>
+<a id="element-template" class="list-group-item"></a>
 
 {% endblock content %}
 
@@ -50,6 +51,11 @@ Learner collaborative
           children: null
         }
       }
+    },
+    "nav": {
+      rects: [[20, 20, 10, 10],
+              [30, 30, 10, 10]],
+      children: null
     }
   };
   jQuery(function() {
