--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -38,9 +38,9 @@ Learner collaborative
   </div>
 
 </div>
-<a id="element-template" class="list-group-item"></a>
-<a id="element-add-template" class="element-add">&#43;</a>
-<a id="new-element-template" class="list-group-item"><span class="new-element-prefix"></span><input type="text" class="new-element-input"/></a>
+<a id="element-template" class="list-group-item" href="#"></a>
+<a id="element-add-template" class="element-add" href="#">&#43;</a>
+<a id="new-element-template" class="list-group-item form-inline" href="#"><span class="new-element-prefix control-label"></span><input type="text" class="new-element-input form-control"/></a>
 
 {% endblock content %}
 
