Hid templates at the bottom of collab page, cleaned up a line of javascript

--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -93,7 +93,7 @@ canvas {
 
 /* Learner collab page */
 
-#element-template, #element-add-template {
+#element-template, #new-element-template, #element-add-template {
 	display: none;
 }
 
