re-implement the canvas using raphael. organize the interactivity into its own module

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -29,9 +29,8 @@ Learner collaborative
       </div>
       <div class="col-md-9">
         <h4>Mockup x: <span id="x"></span>, y: <span id="y"></span></h4>
-        <div style="position: relative;">
-          <canvas id="mockCanvas">Your browser does not support HTML5 Canvas.</canvas>
-          <img id="mockImg" src="/static/img/LI_mockup.png">
+        <div id="tmp" style="position: relative;">
+          <img id="mockImg" src="/static/img/bootswatch_mockup.png" style="display: none;">
         </div>
       </div>
     </div>
