Fixed element-list id bug

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -21,11 +21,11 @@ Learner collaborative
               <input type="submit" style="display:none"/>
             </div>
           </form>
-          <div class="panel-group" id="elementList" role="tablist" aria-multiselectable="true">
+          <div class="panel-group" id="element-list" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
               <div class="panel-heading toggle-collapse" role="tab">
                 <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#elementList" href="#elBtn" aria-expanded="true" aria-controls="elBtn">
+                  <a data-toggle="collapse" data-parent="#element-list" href="#elBtn" aria-expanded="true" aria-controls="elBtn">
                     Buttons
                   </a>
                 </h4>
@@ -48,7 +48,7 @@ Learner collaborative
             <div class="panel panel-default">
               <div class="panel-heading toggle-collapse" role="tab">
                 <h4 class="panel-title">
-                  <a class="collapsed" data-toggle="collapse" data-parent="#elementList" href="#elTypography" aria-expanded="true" aria-controls="elTypography">
+                  <a class="collapsed" data-toggle="collapse" data-parent="#element-list" href="#elTypography" aria-expanded="true" aria-controls="elTypography">
                     Typography
                   </a>
                 </h4>
