--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -13,70 +13,7 @@ Learner collaborative
   <div class="panel-body">
     <div class="row">
       <div class="col-md-3">
-        <div class="panel-body">
-          <form id="new-element-form" action="" method="get">
-            <div class="form-group">
-              <label for="inputNewElement">Enter a new type of element</label>
-              <input type="text" class="form-control" id="inputNewElement" placeholder="e. g. button"/>
-              <input type="submit" style="display:none"/>
-            </div>
-          </form>
-          <div class="panel-group" id="element-list" role="tablist" aria-multiselectable="true">
-            <div class="panel panel-default">
-              <div class="panel-heading toggle-collapse" role="tab">
-                <h4 class="panel-title">
-                  <a data-toggle="collapse" data-parent="#element-list" href="#elBtn" aria-expanded="true" aria-controls="elBtn">
-                    Buttons
-                  </a>
-                </h4>
-              </div>
-              <div id="elBtn" class="panel-collapse collapse in" role="tabpanel">
-                <div class="panel-body">
-                  <div class="list-group">
-                    <a href="#" class="list-group-item">.btn-default <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-primary <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-success <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-warning <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-danger <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-block <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-sm <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.btn-lg <span class="badge">0</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="panel panel-default">
-              <div class="panel-heading toggle-collapse" role="tab">
-                <h4 class="panel-title">
-                  <a class="collapsed" data-toggle="collapse" data-parent="#element-list" href="#elTypography" aria-expanded="true" aria-controls="elTypography">
-                    Typography
-                  </a>
-                </h4>
-              </div>
-              <div id="elTypography" class="panel-collapse collapse" role="tabpanel">
-                <div class="panel-body">
-                  <div class="list-group">
-                    <a href="#" class="list-group-item">h1 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">h2 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">h3 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">h4 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">h5 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">h6 <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">strong <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">em <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">blockquote <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-muted <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-primary <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-warning <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-danger <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-success <span class="badge">0</span></a>
-                    <a href="#" class="list-group-item">.text-info <span class="badge">0</span></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="panel-group" id="elementList" role="tablist" aria-multiselectable="true"></div>
       </div>
       <div class="col-md-9">
         <h4>Mockup</h4>
@@ -86,15 +23,52 @@ Learner collaborative
       </div>
     </div>
   </div>
-
 </div>
 <a id="element-template" class="list-group-item" href="#"></a>
 <a id="element-add-template" class="element-add" href="#">&#43;</a>
 <a id="new-element-template" class="list-group-item form-inline" href="#"><span class="new-element-prefix control-label"></span><input type="text" class="new-element-input form-control"/></a>
 
+
+<div id="newElementForm" class="panel panel-default" style="width: 400px; position: absolute; display: none;">
+  <div class="panel-heading"><label class="control-label" for="newElementTag">Tag the Element</label></div>
+  <div class="panel-body">
+    <div class="row">
+      <div class="col-sm-6"></div>
+      <div class="col-sm-6" id="newElementSiblings"></div>
+    </div>
+    <div class="row">
+      <div class="col-lg-12 text-right">
+        <div class="btn btn-default" id="newElementCancel">Cancel</div>
+        <div class="btn btn-primary disabled" id="newElementSubmit">Save</div>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
 
 {% block script %}
+<script type="text/template" id="elementListPanelTemplate">
+<% _.forEach(groups, function(items, title) { %>
+<div class="panel panel-default">
+  <div class="panel-heading toggle-collapse" role="tab">
+    <h4 class="panel-title">
+      <a href="#el<%= title %>" class="collapsed" data-toggle="collapse" data-parent="#element-list" aria-expanded="false" aria-controls="el<%= title %>">
+        <%= title %>
+      </a>
+    </h4>
+  </div>
+  <div id="el<%= title %>" class="panel-collapse collapse" role="tabpanel">
+    <div class="panel-body">
+      <div class="list-group">
+        <% _.forEach(items, function(item) { %>
+        <a href="#" class="list-group-item" data-item="<%= item %>"><%= item %> <span class="badge">0</span></a>
+        <% }); %>
+      </div>
+    </div>
+  </div>
+</div>
+<% }); %>
+</script>
 <script type="text/javascript">
   PWAP.rects =
   {
