--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -13,7 +13,6 @@ Learner collaborative
   <div class="panel-body">
     <div class="row">
       <div class="col-md-3">
-        <div class="panel-group" id="elementList" role="tablist" aria-multiselectable="true"></div>
         <div class="panel-body">
           <div class="panel-group" id="element-list" role="tablist" aria-multiselectable="true">
             <div class="panel panel-default">
@@ -134,7 +133,8 @@ Learner collaborative
   PWAP.rects =
   {
     'r1': [1850, 30, 160, 75],
-    'r2': [1500, 800, 300, 75]
+    'r2': [1500, 800, 400, 75],
+    'r3': [1585, 270, 225, 75]
   };
   PWAP.state = [
     {
@@ -144,6 +144,10 @@ Learner collaborative
     {
       rectID: 'r2',
       class: 'btn-success'
+    },
+    {
+      rectID: 'r3',
+      class: 'strong'
     }
   ];
   jQuery(function() {
