work on collab interactivity

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -15,6 +15,7 @@ Learner collaborative
       <div class="col-xs-3">
         <div class="panel-group" id="element-list" role="tablist" aria-multiselectable="true"></div>
         <h4 id="styleguide-header">Styleguide preview</h4>
+        <div id="styleguide-preview"></div>
       </div>
       <div class="col-xs-9">
         <h4>Mockup</h4>
@@ -25,14 +26,12 @@ Learner collaborative
     </div>
   </div>
 </div>
-<div id="styleguide-preview-template" class="styleguide-preview"></div>
-
 
 <div id="newElementForm" class="panel panel-default" style="width: 400px; position: absolute; display: none;">
   <div class="panel-heading"><label class="control-label" for="newElementTag">Tag the Element</label></div>
   <div class="panel-body">
     <div class="row">
-      <div class="col-sm-6"></div>
+      <div class="col-sm-6" id="newElementClasses"></div>
       <div class="col-sm-6" id="newElementSiblings"></div>
     </div>
     <div class="row">
