most stuff working for editing elements in collab

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -31,13 +31,15 @@ Learner collaborative
   <div class="panel-heading"><label class="control-label" for="newElementTag">Tag the Element</label></div>
   <div class="panel-body">
     <div class="row">
-      <div class="col-sm-6" id="newElementClasses"></div>
+      <div class="col-sm-6">
+        <ul class="list-group" id="newElementClasses"></ul>
+      </div>
       <div class="col-sm-6" id="newElementSiblings"></div>
     </div>
     <div class="row">
       <div class="col-lg-12 text-right">
         <div class="btn btn-default" id="newElementCancel">Cancel</div>
-        <div class="btn btn-primary disabled" id="newElementSubmit">Save</div>
+        <div class="btn btn-primary" id="newElementSubmit">Save</div>
       </div>
     </div>
   </div>
