add deletion of boxes

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -38,6 +38,7 @@ Learner collaborative
     </div>
     <div class="row">
       <div class="col-lg-12 text-right">
+        <div class="btn btn-link" id="newElementDelete">Delete</div>
         <div class="btn btn-default" id="newElementCancel">Cancel</div>
         <div class="btn btn-primary" id="newElementSubmit">Save</div>
       </div>
