--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -69,7 +69,9 @@ Learner collaborative
   </div>
 </div>
 <% }); %>
+
 </script>
+<script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
 <script type="text/javascript">
   PWAP.rects =
   {
