--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -73,11 +73,8 @@ Learner collaborative
 </script>
 <script src="https://cdn.socket.io/socket.io-1.3.3.js"></script>
 <script type="text/javascript">
-  PWAP.rects =
-  {
-  };
-  PWAP.state = [
-  ];
+  PWAP.rects = {};
+  PWAP.state = [];
   jQuery(function() {
     PWAP.collab();
   });
