--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -5,6 +5,7 @@ Learner collaborative
 {% endblock title %}
 
 {% block content %}
+<style type="text/css">nav { display: none; }</style>
 <div class="panel panel-default">
   <div class="panel-heading">
     <h2 class="panel-title">Collaborative styleguide generation</h2>
