--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -176,6 +176,22 @@ canvas {
 	height: 50px;
 }
 
+#collab-title, #view-styleguide {
+	display: inline-block;
+}
+
+#collab-title {
+	font-size: 24px;
+}
+
+#view-styleguide {
+	float: right;
+}
+
+#collab-heading{
+	overflow: auto;
+}
+
 /* element list in edit mode */
 .edit .badge {
 	display: none;
