Basic tutorial / help pane

--- a/pwap/templates/collab.html
+++ b/pwap/templates/collab.html
@@ -15,6 +15,33 @@ Learner collaborative
   <div class="panel-body">
     <div class="row">
       <div class="col-xs-3">
+        <div class="panel-group">
+          <div class="panel panel-default">
+            <div class="panel-body">
+              <div class="tutorial-step active" id="tutorial-step-intro">
+                Welcome! Your goal is to identify all the <a href="http://getbootstrap.com/">Bootstrap</a> elements in the mockup to the right.
+                <br><br>
+                Start by clicking and dragging a box around an element.
+              </div>
+              <div class="tutorial-step" id="tutorial-step-tag">
+                Tag the element with a Bootstrap class name from the list below. You can give the element as many tags as you want. Click "Save" when you're done.
+              </div>
+              <div class="tutorial-step" id="tutorial-step-draw">
+                Great! Try tagging another element.
+                <br><br>
+                You can edit or delete an element by clicking on it.
+              </div>
+              <div class="tutorial-step" id="tutorial-step-cover">
+                Keep tagging elements until everything in the mockup has been tagged.
+                <br><br>
+                To check your work, click on a tag from the list and see if the highlighted elements match.
+              </div>
+              <div class="tutorial-step" id="tutorial-step-approve">
+                When you're satisfied with all your tags, click the "View / approve styleguide" button. Check your work, looking for elements that are out of place. Once everything looks good, click "Approve".
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="panel-group" id="element-list" role="tablist" aria-multiselectable="true"></div>
         <h4 id="styleguide-header">Styleguide preview</h4>
         <div id="styleguide-preview"></div>
