--- a/pwap/templates/preview.html
+++ b/pwap/templates/preview.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<link rel="stylesheet" href="{{ url_for('static', filename='css/normalize.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}">
 {% if css %}
 <style type="text/css">
     body {
