--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -171,9 +171,8 @@ canvas {
 	overflow: scroll;
 }
 
-.styleguide-preview {
-	width: 50px;
-	height: 50px;
+#styleguide-preview {
+	background-color: #f5f5f5;
 }
 
 #collab-title, #view-styleguide {
@@ -200,3 +199,24 @@ canvas {
 .tutorial-step:not(.active) {
 	display: none;
 }
+
+.styleguide-preview-component {
+	background-color: #f5f5f5;
+}
+
+#tutorial {
+	transition: box-shadow 1s;
+}
+
+#tutorial.highlighted {
+	transition: 0.5s;
+	/*border-color: red;
+	border-width: 2px;*/
+	box-shadow: 0px 0px 8px #11cc11;
+}
+/*#tutorial.not-highlighted {
+	transition: 1s;
+	border-color: #dddddd;
+	border-width: 1px;
+}*/
+
